# ChangeLog for net-im/kadu
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*kadu-0.9.1 (09 Apr 2011)

  09 Apr 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.9.1.ebuild:
  Bumped.

*kadu-0.9.0 (19 Mar 2011)

  19 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.9.0.ebuild:
  Bumped.

*kadu-0.6.6_rc4 (16 Mar 2011)

  16 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.6.6_rc4.ebuild:
  Bumped.

*kadu-0.6.6_rc3 (12 Mar 2011)

  12 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.6.6_rc3.ebuild:
  Bumped.

  10 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> kadu-0.6.5.4.ebuild,
  kadu-0.6.5.5.ebuild, kadu-0.6.6_rc1.ebuild, kadu-0.6.6_rc2.ebuild,
  metadata.xml:
  Renamed sounds flag to sound, as per Gentoo bug #357661.

*kadu-0.6.5.5 (09 Mar 2011)

  09 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.6.5.5.ebuild:
  Bumped.

*kadu-0.6.6_rc2 (05 Mar 2011)

  05 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.6.6_rc2.ebuild:
  Bumped.

*kadu-0.6.6_rc1 (23 Feb 2011)

  23 Feb 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.6.6_rc1.ebuild:
  Bumped.

*kadu-0.6.6_beta17 (18 Feb 2011)

  18 Feb 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.6.6_beta17.ebuild:
  Bumped.

*kadu-0.6.6_beta16 (17 Feb 2011)

  17 Feb 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.6.6_beta16.ebuild:
  Bumped.

*kadu-0.6.6_beta15 (06 Feb 2011)

  06 Feb 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.6.6_beta15.ebuild:
  Bumped.

  09 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> metadata.xml:
  Removed tlen flag from metadata.xml.

*kadu-0.6.6_beta14_p2 (04 Jan 2011)

  04 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.6.6_beta14_p2.ebuild:
  Bumped.

*kadu-0.6.6_beta14 (04 Jan 2011)

  04 Jan 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.6.6_beta14.ebuild:
  Bumped.

*kadu-0.6.6_beta13 (22 Dec 2010)

  22 Dec 2010; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.6.6_beta13.ebuild:
  Bumped.

*kadu-0.6.6_beta12 (07 Dec 2010)
