@@ -1,6 +1,7 @@
 EBUILD kadu-0.6.5.4.ebuild 1181 RMD160 8d8d1abe12d453eaf5e97bfb8ee754d2117f5d25 SHA1 805b6edb90a4cfb66f1ddbe0b4c2ed31c703d00c SHA256 905e20a6089a10666c8574cf6e42d5e6d6e890a97602b8698c90fbd3cda7815c
 EBUILD kadu-0.6.5.5.ebuild 1181 RMD160 8d8d1abe12d453eaf5e97bfb8ee754d2117f5d25 SHA1 805b6edb90a4cfb66f1ddbe0b4c2ed31c703d00c SHA256 905e20a6089a10666c8574cf6e42d5e6d6e890a97602b8698c90fbd3cda7815c
 EBUILD kadu-0.9.0.ebuild 2023 RMD160 291f7349d92328a9cf5db3906a2af1a60bc0e339 SHA1 11f267a50c0f274e9c0b89ac89f286181c537b37 SHA256 b64c1fb5d4794a300edd7b9f4351c23cc925e087ef831378a6f62117d8840e60
+EBUILD kadu-0.9.1-r1.ebuild 2019 RMD160 76deefe2cd51194e75b1abf85ba4fa16e73a4ecd SHA1 9b781d7e224b7c9e02df9799c080333c8634f846 SHA256 c08a940f75ae0869739ac0f6e2fc910bd46411a7498eb95c39e7c45b2969e03c
 EBUILD kadu-0.9.1.ebuild 2023 RMD160 291f7349d92328a9cf5db3906a2af1a60bc0e339 SHA1 11f267a50c0f274e9c0b89ac89f286181c537b37 SHA256 b64c1fb5d4794a300edd7b9f4351c23cc925e087ef831378a6f62117d8840e60
-MISC ChangeLog 5972 RMD160 f3e87638f188f90d86534a5ac377a4cdde4e7f8e SHA1 0a69ee36fbb5ee5c1769bce226cea0ecc791728b SHA256 0fc1de7e5bd177db8558cf02b1e591b9dc0e502421e3cae94843d0cbc37a2310
-MISC metadata.xml 617 RMD160 1708f29c9cad258d1337c140503397c8e9757c0f SHA1 8c6c20151eb273f9dbbc70654b6fe80f4bf8b60b SHA256 c22779d19b212d9cad4fec79f40c0f593380ba4b190799c6c0a3831188caab20
+MISC ChangeLog 6136 RMD160 8de2db3cd001b0f638316c4e6d6f06e09725ab5e SHA1 47b50ef843cff1cf0d3c2d7ba36456ccfc92ab80 SHA256 7f478ac3773d219dd30dd5b15e3878d54c03e4a2459bd5500d35591ced3f3f0f
+MISC metadata.xml 678 RMD160 ad34bb6217a13b2b8c69109e620cebb52d733ffd SHA1 e562e208d3bfeee28903580bab5d9c18a2a49060 SHA256 6ab87103df9957d3d33ee235741a596bed991ae982b4b39f44bc83a4987c743a
