@@ -12,6 +12,7 @@
   <flag name='powerkadu'>Installs powerkadu modules</flag>
   <flag name='sound'>Installs additional sound themes</flag>
   <flag name='voice'>Installs voice chat module</flag>
-  <flag name='phonon'>Install phonon audio plugin</flag>
+  <flag name='phonon'>Installs phonon audio plugin</flag>
+  <flag name='gadu'>Installs GaduGadu support module</flag>
 </use>
 </pkgmetadata>
