@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*kadu-0.9.1-r1 (16 Apr 2011)
+
+  16 Apr 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.9.1-r1.ebuild,
+  metadata.xml:
+  Rev-bumped with flag and metadata changes.
+
 *kadu-0.9.1 (09 Apr 2011)
 
   09 Apr 2011; Michał Ziąbkowski <mziab@o2.pl> +kadu-0.9.1.ebuild:
